# rsgast_api

./: .env  .gitignore  Cargo.toml  README.md
docker/: docker-compose.yaml
docker/etc/postgres/initdb/: create_tables.sql
src/: db.rs
src/sql/: add_user.sql  get_users.sql
