[package]
name = "f1_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
confik = "0.11.8"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
serde = "1.0.210"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.12"
